--- a/templates/management/index.html
+++ b/templates/management/index.html
@@ -34,7 +34,7 @@
                             <div class="round-icon red"><i class="icon-timer"></i></div>
                         </div>
                         <div class="social-num">
-                            <h4>24<span class="label red-bg hidden-md">7%</span></h4>
+                            <h4>{{ post_num }}<span class="label red-bg hidden-md">7%</span></h4>
                             <p>Your Total Posts</p>
                             <div class="progress progress-sm">
                                 <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="65"
@@ -52,7 +52,7 @@
                             <div class="round-icon tw-icon"><i class="icon-layers2"></i></div>
                         </div>
                         <div class="social-num">
-                            <h4>208<span class="label tw-bg hidden-md">18%</span></h4>
+                            <h4>{{ all_num_posts }}<span class="label tw-bg hidden-md">18%</span></h4>
                             <p>Total ByoseHano Posts</p>
                             <div class="progress progress-sm">
                                 <div class="progress-bar progress-bar-tw" role="progressbar" aria-valuenow="45"
