--- a/templates/management/new_post.html
+++ b/templates/management/new_post.html
@@ -23,7 +23,18 @@
 {% endblock javascripts %}
 
 {% block content %}
-
+<style>
+    #id_tags {
+        border-radius: 0;
+        box-shadow: none;
+        -webkit-box-shadow: none;
+        display: block;
+        width: 100%;
+        border: 1px solid #bfbfbf;
+        height: 40px;
+        padding: 8px 12px;
+    }
+  </style>
 <div class="top-bar clearfix">
     <div class="page-title">
         <h4>Form Elements</h4>
@@ -57,6 +68,7 @@
                     <div class="panel-body">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             {{ success_post|safe }}
+                            {{ add_form.errors }}
                         </div>
                         <form action="{% url 'management:new_post' %}" enctype="multipart/form-data" method="POST">
                             {% csrf_token %}
@@ -67,7 +79,7 @@
                             <div class="form-group">
                                 <div class="col-md-6">
                                     <label for="title">Image</label>
-                                    {{ add_post.thumbnail }}
+                                    <p>{{ add_post.thumbnail }}</p>
                                 </div>
                                 <div class="col-md-6">
                                     <label for="title">Category</label>
@@ -109,6 +121,6 @@
         </div>
     </div>
 </div>
-<footer>Copyright Sunrise Admin <span>2016</span>.</footer>
+<footer>Copyright Byosehano Admin <span>2020</span>.</footer>
 
 {% endblock content %}
