--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -46,6 +46,7 @@
               </div>
 
               <div class="utf_post_content-area">
+                <div class="sharethis-inline-share-buttons"></div>
                 <div class="entry-content">
                   {{ post.body|safe }}
                 </div>
