--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,6 +43,9 @@
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     <!-- Google Fonts -->
+    {% block sharethis %}
+      
+    {% endblock sharethis %}
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,700&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&amp;display=swap" rel="stylesheet">
 </head>
