--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -38,7 +38,7 @@
             <div class="col-md-9 col-sm-12 header-right">
                 <div class="ad-banner float-right">
                     <a href="#"><img
-                            src="https://utouchdesign.com/themes/envato/altroz_news/images/banner-ads/ad-top-header.png"
+                            src="holder.js/800x100?text=Advertise here&auto=yes"
                             class="img-fluid" alt=""></a>
                 </div>
             </div>
