--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 {% load user_agents %}
 
 
+
 {% block content %}
 {% if request|is_pc %}
 <!--/ Featured Post Area Start -->
@@ -101,6 +102,15 @@
         </div>
     </div>
 </section>
+<div class="gap-40"></div>
+<div class="utf_ad_content_area text-center utf_banner_area no-padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12"> <img class="img-fluid" src="holder.js/1200x120?text=Advertise here now&auto=yes" alt="">
+            </div>
+        </div>
+    </div>
+</div>
 <!--/ Featured Post Area End -->
 {% endif %}
 <!--/ Latest News Area Start -->
@@ -144,7 +154,7 @@
     <div class="utf_ad_content_area text-center utf_banner_area no-padding">
         <div class="container">
             <div class="row">
-                <div class="col-md-12"> <img class="img-fluid" src="https://utouchdesign.com/themes/envato/altroz_news/images/banner-ads/ad-content-one.jpg" alt="">
+                <div class="col-md-12"> <img class="img-fluid" src="holder.js/1200x120?text=Advertise here now&auto=yes" alt="">
                 </div>
             </div>
         </div>
@@ -495,9 +505,6 @@
                             {% endif %}
                             {% endfor %}
 
-
-
-
                         </ul>
                     </div>
                 </div>
@@ -513,7 +520,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12"> 
-                <img class="img-fluid" src="https://utouchdesign.com/themes/envato/altroz_news/images/banner-ads/ad-content-two.png"
+                <img class="img-fluid" src="holder.js/1200x120?text=Advertise here now&auto=yes"
                     alt="">
             </div>
         </div>
