--- a/templates/layout.html
+++ b/templates/layout.html
@@ -42,6 +42,7 @@
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/holder/2.9.7/holder.min.js"></script>
     <!-- Google Fonts -->
     {% block sharethis %}
       
