--- a/templates/management/index.html
+++ b/templates/management/index.html
@@ -24,6 +24,7 @@
         </li>
     </ul>
 </div>
+
 <div class="main-container">
     <div class="container-fluid">
         <div class="row gutter">
@@ -61,7 +62,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+                holder.js/800x100?text=Advertise here&auto=yes   </div>
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
                 <div class="panel panel-grey spacer-sm">
                     <div class="social-details clearfix">
