--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -14,7 +14,7 @@
 
       <!-- Open Graph / Facebook -->
       <meta property="og:type" content="website">
-      <meta property="og:url" content="https://byosehano.com/">
+      <meta property="og:url" content="https://byosehano.com{{ post.get_absolute_url }}">
       <meta property="og:title" content="{{ post.category.name }} - {{ post.title }}">
       <meta property="og:description" content="{{ post.body|striptags|slice:':200' }}">
       <meta property="og:image" content="https://byosehano.com{{ post.thumbnail.url }}">
