--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 {% load static %}
 {% load humanize %}
+{% load user_agents %}
 
 {% block sharethis %}
 <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5f06beeccc9fba0019cdd26e&product=inline-share-buttons&cms=sop' async='async'></script>
@@ -31,10 +32,19 @@
 
 {% block content %}
     <style>
-      .entry-content img{
-        max-width: 100%;
+      .entry-content {
+        position: relative;
+        padding-top: 56.25%; /* 16:9 Aspect Ratio */
+      }
+      .entry-content img {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: auto;
       }
     </style>
+
     <section class="utf_block_wrapper">
       <div class="container">
         <div class="row">
