--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -32,18 +32,14 @@
 
 {% block content %}
     <style>
-      .entry-content {
-        position: relative;
-        padding-top: 56.25%; /* 16:9 Aspect Ratio */
-      }
-      .entry-content img {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: auto;
+      .entry-content img{
+        max-width: 100%;
       }
     </style>
+
+    {% if request|is_mobile %}
+
+    {% endif %}
 
     <section class="utf_block_wrapper">
       <div class="container">
