--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -31,17 +31,19 @@
 
 
 {% block content %}
-    <style>
-      .entry-content img{
-        max-width: 100%;
-        max-height: auto;
-      }
-    </style>
-
+    
     {% if request|is_mobile %}
       <style>
         .entry-content img{
-          max-height: 200px;
+          max-width:100%;
+          max-height:auto;
+        }
+      </style>
+    {% else %}
+      <style>
+        .entry-content img{
+          max-width: 100%;
+          max-height: auto;
         }
       </style>
     {% endif %}
