--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -37,6 +37,7 @@
         .entry-content img{
           max-width:100%;
           max-height:auto;
+          max-width: 720px;
         }
       </style>
     {% else %}
