--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -35,8 +35,9 @@
     {% if request|is_mobile %}
       <style>
         .entry-content img{
-          max-width:100%;
-          max-height:auto;
+          height: auto;
+          width: 100%;
+        /* even more control with max-width */
           max-width: 720px;
         }
       </style>
