--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -35,10 +35,8 @@
     {% if request|is_mobile %}
       <style>
         .entry-content img{
-          height: auto;
-          width: 100%;
-        /* even more control with max-width */
-          max-width: 720px;
+          max-width:100%;
+          max-height:auto;
         }
       </style>
     {% else %}
