--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -37,9 +37,9 @@
             </div>
             <div class="col-md-9 col-sm-12 header-right">
                 <div class="ad-banner float-right">
-                    <a href="#"><img
-                            src="holder.js/800x100?text=Advertise here&auto=yes"
-                            class="img-fluid" alt=""></a>
+                    <a href="https://smartagri.org" target="_blank"><img
+                            src="{% static 'smartagri_ad.gif' %}"
+                            class="img-fluid" alt="SmartAgri"></a>
                 </div>
             </div>
         </div>
