--- a/templates/index.html
+++ b/templates/index.html
@@ -347,18 +347,13 @@
                 <div class="widget color-default m-bottom-0">
                     <h3 class="utf_block_title"><span>Amamariza Aha</span></h3>
                     <div id="utf_post_slide" class="owl-carousel owl-theme utf_post_slide">
-                        <div class="item">
+                        <a href="https://twitter.com/250foot" target="_blank"><div class="item">
                             <div class="utf_post_overaly_style text-center clearfix">
-                                <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
-                                            src="images/news/tech/gadget1.jpg" alt=""> </a> </div>
-                                <div class="utf_post_content"> <a class="utf_post_cat" href="#">Amamaza</a>
-                                    <h2 class="utf_post_title"> <a href="#">Amamaza ibikorwa byawe nonaha</a> </h2>
-                                    <div class="utf_post_meta"> <span class="utf_post_author"><i class="fa fa-user"></i>
-                                            <a href="#">KANDA W'AMAMAZE NONAHA</a></span>
-                                    </div>
-                                </div>
+                                <div class="utf_post_thumb"> <a href="https://twitter.com/250foot" target="_blank"> <img class="img-fluid"
+                                            src="{% static 'dailyfoot_.png' %}" alt="Dailyfoot"> </a> </div>
                             </div>
                         </div>
+                        </a>
                     </div>
                 </div>
             </div>
