--- a/templates/index.html
+++ b/templates/index.html
@@ -345,15 +345,15 @@
                 </div>
 
                 <div class="widget color-default m-bottom-0">
-                    <h3 class="utf_block_title"><span>Amamariza Aha</span></h3>
+                    <h3 class="utf_block_title"><span>Kwamamaza</span></h3>
                     <div id="utf_post_slide" class="owl-carousel owl-theme utf_post_slide">
-                        <a href="https://twitter.com/250foot" target="_blank"><div class="item">
+                        <div class="item">
                             <div class="utf_post_overaly_style text-center clearfix">
                                 <div class="utf_post_thumb"> <a href="https://twitter.com/250foot" target="_blank"> <img class="img-fluid"
                                             src="{% static 'dailyfoot_.png' %}" alt="Dailyfoot"> </a> </div>
                             </div>
                         </div>
-                        </a>
+                        
                     </div>
                 </div>
             </div>
